# Coinche

./: .gitignore  ADVANCED_STATS_SUMMARY.md  ANDROID_BUILD.md  ANDROID_README.md  CLAUDE.md  CMakeLists.txt  CRASH_IMPLEMENTATION_DONE.md  CRASH_TRACKING.md  CardModel.cpp  Carte.cpp  Carte.h  DATABASE_ANALYSIS.md  DEPLOIEMENT_VPS.md  Deck.cpp  Deck.h  Deck.ilk  ETAPES_ANDROID_STUDIO.md  GameManager.cpp  GameManager.h  GameModel.cpp  GameModel.h  GameServer.h  HandModel.cpp  HandModel.h  INSTALLER_OPENSSL.md  INSTALL_ANDROID_TOOLS.md  INSTALL_JDK17.md  MAJAndBuildServer.sh  MEMORY_MANAGEMENT.md  NetworkManager.h  OrientationHelper.h  Player.cpp  Player.h  SERVER_MONITORING.md  STATS_SUMMARY.md  TESTING.md  WindowPositioner.h  add-firewall-rule.ps1  build_aab.ps1  check_android_setup.ps1  (+21 more)
android/: .gitignore  AndroidManifest.xml  build.gradle  qtdeploy.json
android/java/com/coinche/game/: MainActivity.java
android/res/values/: strings.xml  styles.xml
android/res/xml/: network_security_config.xml
android/src/fr/nebuludik/coinche/: KeyboardHelper.java
installer/: coinche.iss
qml/: AnnoncesPanel.qml  AnnoncesPanel.qml.autosave  AppBackButton.qml  AppButton.qml  AudioSettings.qml  AvatarSelector.qml  AvatarSelectorPopup.qml  BeloteAnnoncesPanel.qml  BeloteView.qml  BidCometAnimation.qml  BidWave.qml  BotReplacementPopup.qml  Card.qml  CoincheView.qml  Config.qml  Contact.qml  DisplaySettings.qml  ExitGamePopup.qml  ExplosionAnimation.qml  FriendRequestToast.qml  FriendsView.qml  GameOverPopup.qml  LobbyInviteToast.qml  LobbyRoomView.qml  LoginView.qml  MainMenu.qml  MatchMakingView.qml  PlayerStatsPopup.qml  PrivacyPolicy.qml  PrivateLobbyView.qml  Rules.qml  Settings.qml  ShootingStar.qml  SplashScreen.qml  StarryBackground.qml  StatsView.qml  UfoNewMancheAnimation.qml  main.qml  qmldir
server/: DatabaseManager.cpp  DatabaseManager.h  GameServer.cpp  GameServer.h  GameServerTest.h  LogManager.h  NetworkManager.cpp  NetworkManager.h  STATS_README.md  ScoreCalculator.h  SmtpClient.cpp  SmtpClient.h  StatsReporter.cpp  StatsReporter.h  server.pro  server_main.cpp
server/deploy/: CHECKLIST.md  GUIDE_RAPIDE.md  README_DEPLOY.md  deploy.sh
tests/: CMakeLists.txt  GameServerTest.h  README.md  TESTING_GUIDE.md  auth_test.cpp  belote_bidding_integration_test.cpp  belote_mode_test.cpp  belote_score_test.cpp  capot_generale_test.cpp  carte_test.cpp  coinche_test.cpp  databasemanager_test.cpp  deck_test.cpp  friends_integration_test.cpp  friends_test.cpp  gamemanager_test.cpp  gameserver_integration_test.cpp  gameserver_test.cpp  networkmanager_integration_test.cpp  networkmanager_test.cpp  player_test.cpp  private_lobby_integration_test.cpp  run_tests.bat  run_tests.sh  scorecalculator_test.cpp  server_rejection_test.cpp  test_capot_generale.cpp  ui_test_plan.md
website/: .htaccess  setup_coinche.php
website/mu-plugins/: coinche-dark-theme.php
